Add reset game button when no legal moves

--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
       <div id="dice1" class="dice">⚅</div>
       <div id="dice2" class="dice">⚅</div>
     </div>
-    <button class="button" id="roll">Rull terning</button>
+    <button class="button" id="rollButton">Rull terning</button>
     <div id="chooseButtons" class="hidden">
-      <button class="button" id="sum">Bruk sum</button>
-      <button class="button" id="dice">Bruk begge tall</button>
+      <button class="button" id="sumButton">Bruk sum</button>
+      <button class="button" id="diceButton">Bruk begge tall</button>
     </div>
+    <button class="button hidden" id="resetButton">Start på nytt</button>
 
     <script src="./dist/app.js"></script>
   </body>
