Add new win popup modal

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   </head>
   <body>
     <h1>JOLV</h1>
+    <div class="overlay" id="overlay">
+      <div class="popup">
+        <h2 id="modalTitle"></h2>
+        <p id="modalText"></p>
+        <button onclick="closePopup()">Start på nytt</button>
+      </div>
+    </div>
     <div id="numbers-container">
       <div class="number missing">1</div>
       <div class="number missing">2</div>
